[package]
name = "hug"
version = "0.0.2"
edition = "2021"
description = "On-the-fly UI"
license = "GPL-3.0"
repository = "https://github.com/rationalintelligence/hug"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
nom = "7.1.3"
ratatui = "0.29.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
