[package]
name = "hug"
version = "0.0.2"
edition = "2021"
description = "On-the-fly UI"
license = "GPL-3.0"
repository = "https://github.com/rationalintelligence/hug"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
crb = "0.0.20"
crossterm = "0.28.1"
nom = "7.1.3"
ratatui = "0.29.0"
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
uiio = "0.0.2"
